Blender crashes when zoomed in and rotating around 3d cursor #32123

Closed
opened 2012-07-16 18:35:16 +02:00 by Kevin T · 7 comments

%%%OS Vista 32-bit
Nvidia Gforce 8200G M
¨
File created in:Blender 2.63-r46461:46487M win32 zip version
Crash Tested on:
Blender-2.63-r48948-win32
Blender 2.63-r46461:46487M win32 zip version

How to redo crash:

open attached file.(load UI)>change the "pivot center for rotation/scaling" to 3d cursor.

press 5 to change to orto view >zoom in as much as you can (angle does not seem to matter)>now press R to rotate <--Now blender stops responding

What i have noticed is that if i have the camera to "right orto" and i move the 3D cursor to ABOVE the green line(positiv Z-value) and then tries to rotate by pressing R,no crash occur.But if the 3D cursor is are BELOW the line. A crash will happen.

It will also not happen if i chose to load file but unselect "load UI".%%%

%%%OS Vista 32-bit Nvidia Gforce 8200G M ¨ File created in:Blender 2.63-r46461:46487M win32 zip version Crash Tested on: Blender-2.63-r48948-win32 Blender 2.63-r46461:46487M win32 zip version How to redo crash: open attached file.(load UI)>change the "pivot center for rotation/scaling" to 3d cursor. >press 5 to change to orto view >zoom in as much as you can (angle does not seem to matter)>now press R to rotate <--Now blender stops responding What i have noticed is that if i have the camera to "right orto" and i move the 3D cursor to ABOVE the green line(positiv Z-value) and then tries to rotate by pressing R,no crash occur.But if the 3D cursor is are BELOW the line. A crash will happen. It will also not happen if i chose to load file but unselect "load UI".%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I think I had to also ensure I selected the object first, but ya I got the same thing in linux in r49005.

Basically it seems to lock up 1 core to 100% and never return. In a debugger I was able to ctrl C and get a bt, but I don't know if it will help:

(gdb) thread apply all bt

Thread 3 (Thread 0x7fffed3a3700 (LWP 20280)):

  • 0 sem_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/sem_wait.S:86
  • 1 0x00007fffef88335f in ?? () from /usr/lib/libIlmThread.so.6
  • 2 0x00007ffff6243e9a in start_thread (arg=0x7fffed3a3700) at pthread_create.c:308
  • 3 0x00007ffff432d4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

4 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fffedba4700 (LWP 20279)):

  • 0 sem_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/sem_wait.S:86
  • 1 0x00007fffef88335f in ?? () from /usr/lib/libIlmThread.so.6
  • 2 0x00007ffff6243e9a in start_thread (arg=0x7fffedba4700) at pthread_create.c:308
  • 3 0x00007ffff432d4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

4 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ffff7fb07c0 (LWP 20275)):

  • 0 0x00007ffff23dc7b0 in ?? () from /usr/lib/nvidia-current/libnvidia-glcore.so.295.40
  • 1 0x00000000009d5da0 in T.316 ()
  • 2 0x00000000009d6490 in drawHelpline ()
  • 3 0x00000000008c814b in wm_paintcursor_draw ()
  • 4 0x00000000008c845f in wm_method_draw_overlap_all ()
  • 5 0x00000000008c8d6f in wm_draw_update ()
  • 6 0x00000000008c7468 in WM_main ()
  • 7 0x00000000008c599a in main ()
    %%%
%%%I think I had to also ensure I selected the object first, but ya I got the same thing in linux in r49005. Basically it seems to lock up 1 core to 100% and never return. In a debugger I was able to ctrl C and get a bt, but I don't know if it will help: (gdb) thread apply all bt Thread 3 (Thread 0x7fffed3a3700 (LWP 20280)): - 0 sem_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/sem_wait.S:86 - 1 0x00007fffef88335f in ?? () from /usr/lib/libIlmThread.so.6 - 2 0x00007ffff6243e9a in start_thread (arg=0x7fffed3a3700) at pthread_create.c:308 - 3 0x00007ffff432d4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112 # 4 0x0000000000000000 in ?? () Thread 2 (Thread 0x7fffedba4700 (LWP 20279)): - 0 sem_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/sem_wait.S:86 - 1 0x00007fffef88335f in ?? () from /usr/lib/libIlmThread.so.6 - 2 0x00007ffff6243e9a in start_thread (arg=0x7fffedba4700) at pthread_create.c:308 - 3 0x00007ffff432d4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112 # 4 0x0000000000000000 in ?? () Thread 1 (Thread 0x7ffff7fb07c0 (LWP 20275)): - 0 0x00007ffff23dc7b0 in ?? () from /usr/lib/nvidia-current/libnvidia-glcore.so.295.40 - 1 0x00000000009d5da0 in T.316 () - 2 0x00000000009d6490 in drawHelpline () - 3 0x00000000008c814b in wm_paintcursor_draw () - 4 0x00000000008c845f in wm_method_draw_overlap_all () - 5 0x00000000008c8d6f in wm_draw_update () - 6 0x00000000008c7468 in WM_main () - 7 0x00000000008c599a in main () %%%
Author

%%%Yeah as Dan McGrath said. Select the object and then press R,otherwise nothing will happen.%%%

%%%Yeah as Dan McGrath said. Select the object and then press R,otherwise nothing will happen.%%%

%%%Will look into this.%%%

%%%Will look into this.%%%
Author

%%%Sergey Sharybin, has there been any progress?%%%

%%%Sergey Sharybin, has there been any progress?%%%

%%%Deadlock is fixed in svn rev49236. Helper widget could look wrong, that's because of not enough precision of floats used by Blender.

This is known issue of Blender and wouldn't consider a bug. Requires some thoughts and design changes.

Thanks for the report, closing.%%%

%%%Deadlock is fixed in svn rev49236. Helper widget could look wrong, that's because of not enough precision of floats used by Blender. This is known issue of Blender and wouldn't consider a bug. Requires some thoughts and design changes. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32123
No description provided.