Fix #32123: Blender crashes when zoomed in and rotating around 3d cursor

Fix deadlock in drawArc caused by precision error. Helper widget could
look wrong, that's because of not enough precision of floats used by
Blender.

This is known issue of Blender and wouldn't consider a bug.